--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 project(CNS VERSION "1.0.0")
 
-add_executable(CNS main.cpp)
+add_executable(CNS main.cpp interpreter.cpp)
 target_include_directories(CNS PUBLIC "${PROJECT_BINARY_DIR}")
